<resources>
    <string name="app_name">Popular Movies</string>
    <string name="Details">Details Movies</string>

    <!--"start" - this string related for activity movie details-->
    <string name="description_movie_poster">Contains poster of movie</string>
    <string name="heading_release_date">publish date</string>
    <string name="example_release_date">16–10–1996</string>
    <string name="example_vote_average">7/10</string>
    <string name="heading_vote_average">Vote Average</string>
    <string name="example_original_title">Original Title</string>
    <string name="example_details">disadoaudoasuodasuduasoiduasudoaudaad
        dasioduaoudoasudois dasuod uasodasudasoudoasu saoduasoudi
        das dusa dsdauoidu soduasiod  asuod asd sdasudo asudaso?</string>
    <!--End-->

    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="overview">Overview</string>
    <string name="description_to_image">In here you should image about move</string>
    <string name="trailer_title">Trailer Title</string>
    <string name="trailer_language">Trailer Language</string>
    <string name="review_title">Review Title</string>
    <string name="author">Author</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="title_favorites">Favorites</string>


</resources>
